src/styles.css
/* .poppins-thin {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.poppins-extralight {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
}

.poppins-light {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.poppins-medium {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.poppins-semibold {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.poppins-bold {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.poppins-extrabold {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.poppins-black {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.poppins-thin-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.poppins-extralight-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: italic;
}

.poppins-light-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.poppins-regular-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.poppins-medium-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.poppins-semibold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: italic;
}

.poppins-bold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.poppins-extrabold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: italic;
}

.poppins-black-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: italic;
}
 */
body {
  font-family: "Poppins", sans-serif;
  background-color: #acdbe2;
  padding: 20px;
}
.container {
  max-width: 1400px;
  margin: 0 auto;
  padding: 0px 120px;
  background: #d1edf7;
  border-radius: 8px;
}

.grid {
  display: grid;
  grid-template-columns: 1fr 2fr 2fr;
}

section {
  max-width: 1200px;
  margin: 0 auto;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
    url("../images/corfu-header.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 200px 0;
}

header h1 {
  font-weight: 700;
  font-size: 80px;
  line-height: 1;
  margin: 30px 0;
}

header h2 {
  font-weight: 300;
  font-size: 30px;
  line-height: 1.5;
  margin: 0;
}
header h3 {
  font-weight: 900;
  font-size: 20px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
}
header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  color: #036370;
  background-color: white;
  text-decoration: none;
  display: inline-block;
  margin-top: 32px;
  padding: 16px 32px;
  border-radius: 10px;
}

footer {
  background-image: linear-gradient(
      rgba(39, 32, 68, 0.9),
      rgba(39, 32, 68, 0.9)
    ),
    url("../images/CorfuBeach.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  padding: 100px 0;
}

footer h4 {
  font-weight: 600;
  font-size: 20px;
  line-height: 1.5;
  margin: 0;
}

footer p {
  font-weight: 400;
  font-size: 13px;
  opacity: 0.7;
  margin-right: 20px;
  line-height: 24px;
}

footer ul {
  padding: 5px;
}

footer li {
  list-style: none;
  margin: 0;
  padding: 0;
}

footer a {
  color: white;
  opacity: 0.7;
  font-size: 13px;
  text-decoration: none;
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }
  header h1 {
    font-size: 40px;
    margin: 20px 0;
  }
  header h2 {
    font-size: 15px;
    margin: 0;
  }
  header h3 {
    font-size: 10px;
    letter-spacing: 3px;
    margin: 0;
  }
  header a {
    font-size: 8px;
    padding: 10px 20px;
    margin-top: 16px;
  }
  .container {
    padding: 0px 20px;
  }
  .grid {
    grid-template-columns: 1fr;
    gap: 40px;
  }
  footer {
    text-align: center;
    padding: 60px 0;
  }
  footer a {
    padding: 0;
    margin: 0;
    display: inline-block;
  }
  footer p {
    margin: 20px 0 0 0;
  }
}

